<resources>
    <string name="app_name">PulseYa</string>
    <string name="google_maps_key">AIzaSyBsqpAGxGTq9G2knJVkfJnKQtCDFUrNfLU</string>

    <!-- Inicio -->
    <string name="boton_de_inicio">Ingresar sesión</string>

    <!-- Login -->
    <string name="login_txt">Login</string>
    <string name="correo_txt">Correo:</string>
    <string name="contraseña_txt">Contraseña:</string>
    <string name="no_tener_cuenta">No tienes una cuenta?, Registrate</string>

    <!-- Registrar -->
    <string name="registrar_txt">Registrar</string>
    <string name="nombre_txt">Nombre:</string>
    <string name="ya_tener_cuenta">Ya Tienes una cuenta?, Inicia Sesión:</string>
    <string name="desea_publicar_eventos">Desea publicar eventos?</string>

    <!-- Bottom Nav -->
    <string name="inicio">Inicio</string>
    <string name="mapa">Mapa\n</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="descripcion_evento">Descripcion Evento</string>
    <string name="titulo_evento">Titulo Evento</string>
    <string name="fecha">Fecha</string>
    <string name="hora_inicio">Hora Inicio:</string>
    <string name="notificar">Notificar</string>
    <string name="ver_mapa">Ver Mapa</string>
    <string name="eliminar">Eliminar</string>
    <string name="usuario">usuario</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="non" />
    <string name="ver_evento_guardado">Ver Evento Guardado</string>
    <string name="filtrar_eventos">Mis Eventos</string>
    <string name="publicar_eventos">Publicar Eventos</string>
    <string name="logout">Logout</string>

    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="nombre_del_evento">Nombre del evento:</string>
    <string name="fecha_del_evento">Fecha del evento:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="direccion_del_evento">Direccion del evento:</string>
    <string name="tipo_de_evento">Tipo de Evento</string>
    <string name="tocata">Tocata</string>
    <string name="raves">Raves</string>
    <string name="sinfonica">Sinfonica</string>
    <string name="after_hour">After_Hour</string>
    <string name="festival">Festival</string>
    <string name="plus">+</string>
    <string name="insertar_imagen">Insertar Imagen</string>
    <string name="concierto">Concierto</string>

</resources>