<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".PublicarEventoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/publicar_eventos"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="130dp"
        android:text="@string/nombre_del_evento"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:text="@string/fecha_del_evento"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreEvento" />

    <EditText
        android:id="@+id/editTextNombreEvento"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rectangle_bar"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/non"
        android:textColor="#8B8B8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextFechaEvento"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rectangle_bar"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/non"
        android:textColor="#8B8B8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextHoraInicioEvento"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_bar"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/non"
        android:textColor="#8B8B8B"
        app:layout_constraintStart_toEndOf="@+id/btnSubirImagen"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/descripcion"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHoraInicioEvento" />

    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="363dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_bar"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/non"
        android:textColor="#8B8B8B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/direccion_del_evento"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescripcion" />

    <EditText
        android:id="@+id/editTextDireccion"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_bar"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/non"
        android:textColor="#8B8B8B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/tipo_de_evento"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDireccion" />

    <RadioGroup
        android:id="@+id/radioGroupTipoEvento"
        android:layout_width="164dp"
        android:layout_height="248dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioTocata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tocata"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioRaves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raves"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioSinfonica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sinfonica"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioAfterHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/after_hour"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioFestival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/festival"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/btnPublicarEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#40000000"
        android:text="@string/publicar_eventos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSubirImagen"
        android:layout_width="80dp"
        android:layout_height="118dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="#40000000"
        android:text="@string/plus"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="80dp"
        android:text="@string/insertar_imagen"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="Hora Inicio:"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreEvento" />

    <ImageView
        android:id="@+id/imageViewFlyer"
        android:layout_width="80dp"
        android:layout_height="118dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="110dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_img" />
</androidx.constraintlayout.widget.ConstraintLayout>