<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical">

        <!-- Top Bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topbarLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:id="@+id/imagen_usuario"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/color_boton"
                android:contentDescription="@string/usuario"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nombre_usuario"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:text="@string/usuario"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Imagen (Flyer) -->
        <ImageView
            android:id="@+id/flayer"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop" />

        <!-- Buttons Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="51dp">

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Eliminar"
                app:icon="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.444" />

            <TextView
                android:id="@+id/fecha_evento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:text="@string/fecha"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/horaInicio_Evento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/hora_inicio"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fecha_evento" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Event Description Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detallesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/descripcion_evento"
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_evento"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo_evento" />

            <TextView
                android:id="@+id/titulo_evento"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/titulo_evento"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
